Bisect tool #44964

Closed
opened 2015-06-05 14:19:49 +02:00 by Daniel Biskup · 6 comments

System Information
Manjaro Linux, intel hd graphics

Blender Version
Broken: Blender 2.74 000dfc0, Blender 2.74.5 b147473

Short description of error
When using the bisect tool, it behaves strangely. Please watch my video to understand. It works for the grey object on the right. The strange behaviour occures when using bisect on the red object on the left.
Video: https://www.youtube.com/watch?v=ZmHxkjGV2To

Exact steps for others to reproduce the error
Blender file: http://www.pasteall.org/blend/36412
Try to use bisect tool on the red object

**System Information** Manjaro Linux, intel hd graphics **Blender Version** Broken: Blender 2.74 000dfc0, Blender 2.74.5 b147473 **Short description of error** When using the bisect tool, it behaves strangely. Please watch my video to understand. It works for the grey object on the right. The strange behaviour occures when using bisect on the red object on the left. Video: https://www.youtube.com/watch?v=ZmHxkjGV2To **Exact steps for others to reproduce the error** Blender file: http://www.pasteall.org/blend/36412 Try to use bisect tool on the red object
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @BorisMonth

Added subscriber: @BorisMonth

Added subscribers: @ideasman42, @mont29

Added subscribers: @ideasman42, @mont29
Campbell Barton was assigned by Bastien Montagne 2015-06-05 14:33:30 +02:00

You have non-even scale on your 'broken' object… @ideasman42 irc, that kind of tool is not supposed to behave well in such situation?

@BorisMonth btw, please always attach files here, pasteall.org is volatile storage… testlevel0.blend

You have non-even scale on your 'broken' object… @ideasman42 irc, that kind of tool is not supposed to behave well in such situation? @BorisMonth btw, please always attach files here, pasteall.org is volatile storage… [testlevel0.blend](https://archive.blender.org/developer/F185410/testlevel0.blend)

This issue was referenced by bcfe38aa03

This issue was referenced by bcfe38aa037e2fcf1c41a3a85895c1482e21e0aa

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44964
No description provided.