Fix T44964: Bisect tool /w nonuniform scale